Fixed value mapping dropdowns going off-screen caused by very long PDF field option labels

--- a/css/admin.css
+++ b/css/admin.css
@@ -115,6 +115,7 @@
 
 .pdf-forms-for-wpforms-admin .mapping-table
 {
+	table-layout: fixed;
 	width: 100%;
 }
 
